# genesisdeden

./: CMakeLists.txt  README.md  genesisdeden.abi  genesisdeden.wasm
include/: constants.hpp  genesisdeden.hpp  utils.hpp
src/: genesisdeden.cpp
